<resources>
    <string name="app_name" translatable="false">GPX/FIT Exporter</string>
    <string name="starting">Starting …</string>

    <string name="connect_ongoing">Try to connect with Garmin device…</string>
    <string name="connect_no_device">No Garmin device connected!</string>
    <string name="connect_app_not_installed">gimporter CIQ app doesn\'t seem to be installed. Tap to download.</string>
    <string name="connect_app_only_widget_installed">The widget version of gimporter doesn\'t support auto launch. Tap to download the device app for an even more seamless experience.</string>
    <string name="connect_connected">Connected</string>
    <string name="connect_init_failed">Couldn\'t communicate with Garmin Connect</string>


    <string name="settings">Settings</string>
    <string name="force_speed">Force Speed</string>
    <string name="speed">Default Speed:</string>
    <string name="inject_course_points">Inject Course Points</string>
    <string name="use_3d_distance">Use 3D Distance</string>
    <string name="use_walking_grade_factor">Use Walking Grade Factor</string>
    <string name="reduce_points_to">Reduce Points to</string>
    <string name="points">points</string>
    <string name="no_permission">No permission to read files.</string>
    <string name="no_server">Server could not be started</string>
    <string name="serving_from">Serving from: %1$s\n\n%2$s</string>
    <string name="no_files_to_serve">No files to serve from %1$s</string>
    <string name="serving_not_possible">Please use the File Explorer and share files with this app!</string>
    <string name="help">Help</string>
    <string name="menu">Menu</string>
    <string name="select_file">Select a directory to export</string>
    <string name="expand_settings">Expand settings</string>

    <string-array name="speedunits" translatable="false">
        <item name="minkm">min/km</item>
        <item name="kmh">km/h</item>
        <item name="minmil">min/mil</item>
        <item name="mph">mph</item>
    </string-array>

</resources>
